fixed duplication of tweet issue, fixed issue where all tweets were reloading on new tweet submission, fixed line wrap on text input

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -24,6 +24,15 @@
   border-bottom: dotted grey 4px;
   padding-bottom: 16px;
   padding-top: 100px;
+  flex-wrap: wrap;
+
+}
+
+#wrapNewTweet {
+  display: flex;
+  /* word-wrap: break-word;
+  word-break: break-all; */
+
 }
 
 #tweet-text {
@@ -31,6 +40,8 @@
   border: none;
   resize: none;
   outline: none;
+  overflow-wrap: break-word;
+  width: 100%;
 }
 
 .buttonAndCounter {
